--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -141,3 +141,15 @@
 .text-justify {
   text-align: justify !important;
 }
+.audio-player-wrapper.audio-rounded {
+  border-radius: 12px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.audio-player-wrapper.audio-rounded audio {
+  width: 100%;
+  border-radius: 0;
+}
+
